--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,10 @@
 <app-toolbar></app-toolbar>
 <div class="container" fxLayout="row" fxLayoutAlign="center">
   <div fxFlex="20%">
-
   </div>
   <div fxFlex="60%">
-    <app-login style="margin: auto"></app-login>
+    <router-outlet></router-outlet>
   </div>
   <div fxFlex="20%">
-
   </div>
 </div>
